--- a/website/app2/templates/example.html
+++ b/website/app2/templates/example.html
@@ -44,7 +44,7 @@
                     <div class="navbar-header">
                         <h3> Berkeley Investment Group </h3>
                     </div>
-
+<!-- 
                     <div class="collapse navbar-collapse grove-nav">
                         <ul class="nav navbar-nav">
                             <li><a href="/fund_tracker/stock_list">Fund Tracker</a></li>
@@ -57,8 +57,7 @@
                             <li><a href="{% url 'resources' %}">Resources</a></li> 
                             <li><a href="{% url 'join' %}">Join</a></li>                               
                         </ul>        
-                    </div><!-- /.navbar-collapse -->
-                </div>
+                </div><!-- /.navbar-collapse --> -->                </div>
             </nav>
         </header>
         <br> 
